2004-11-12 Bogdan Gheorghe
	Fix for Bug 78414: IProblem count increased through indexing header files stand-alone
	
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexAllProject.java
	* index/org/eclipse/cdt/internal/core/search/indexing/AddCompilationUnitToIndex.java	
	* index/org/eclipse/cdt/internal/core/search/indexing/AddFileToIndex.java	
	* index/org/eclipse/cdt/internal/core/search/indexing/AddFolderToIndex.java	
	* index/org/eclipse/cdt/internal/core/search/indexing/CleanEncounteredHeaders.java	
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java	
	* index/org/eclipse/cdt/internal/core/search/indexing/SourceIndexerRequestor.java	
	
	* parser/org/eclipse/cdt/internal/core/parser/problem/Problem.java
	
2004-11-02 Bogdan Gheorghe
	Fixed a bug in the index merge.
	
	* index/org/eclipse/cdt/internal/core/index/impl/MergeFactory.java
	
2004-11-02 Bogdan Gheorghe
	Partial Fix for Bug 74427: Indexer needs to store more info
	
	* index/org/eclipse/cdt/core/index/IIndexDelta.java	
	* index/org/eclipse/cdt/internal/core/index/IEntryResult.java	
	* index/org/eclipse/cdt/internal/core/index/IIndexerOutput.java
	* index/org/eclipse/cdt/internal/core/index/impl/BlocksIndexInput.java
	* index/org/eclipse/cdt/internal/core/index/impl/EntryResult.java	
	* index/org/eclipse/cdt/internal/core/index/impl/GammaCompressedIndexBlock.java	
	* index/org/eclipse/cdt/internal/core/index/impl/IIndexConstants.java
	* index/org/eclipse/cdt/internal/core/index/impl/IncludeEntry.java	
	* index/org/eclipse/cdt/internal/core/index/impl/Index.java	
	* index/org/eclipse/cdt/internal/core/index/impl/IndexDelta.java	
	* index/org/eclipse/cdt/internal/core/index/impl/IndexedFileHashedArray.java	
	* index/org/eclipse/cdt/internal/core/index/impl/IndexerOutput.java	
	* index/org/eclipse/cdt/internal/core/index/impl/InMemoryIndex.java	
	* index/org/eclipse/cdt/internal/core/index/impl/MergeFactory.java	
	* index/org/eclipse/cdt/internal/core/index/impl/Util.java	